# fireguard_frcm

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: CD-pipeline.yml  CI-pipeline.yml  Docker-pipeline.yml  Sonarqube-scan.yml  Test-pipeline.yml  deploy_to_VM.yml  sonarqube_scan.yml
kubernetes/: frcm-deployment.yaml  metclient-secret.yaml  port-service.yaml
src/: main.py
src/database/: firestore.py
src/frcm/FRC_service/: compute.py  preprocess.py  utils.py
src/frcm/data_harvesting/: client.py  client_met.py  extractor.py  extractor_met.py
src/frcm/database/: firestore.py
src/frcm/logic/: bus_logic.py
tests/API/: api_test.py
tests/FRC_service/: test_compute.py  test_fireriskmodel_utils.py
tests/data_harvesting/: test_client_met.py  test_extractor_met.py
tests/database/: test_db_case_1.py
tests/datamodel/: test_datamodel.py  test_datamodel_utils.py  test_weatherdata_utils.py
tests/logic/: test_bus_logic.py
